# spf

./: Cargo.toml  LICENSE  README.md
src/: cfg.rs  commands.rs  handlers.rs  main.rs
src/cfg/: config_handler.rs  manager.rs  models.rs
src/commands/: song_interaction.rs  user_configure.rs
src/config/: config.rs  config_loader.rs  mod.rs
src/handlers/: config_handler.rs  play_handler.rs
src/spotify/: auth.rs  authenticator.rs  error.rs
src/spotify/auth/: api.rs  authenticator.rs
