[package]
name = "spf"
authors = ["Algot Holton"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive", "unicode"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4.23", features = ["serde"] }

[dependencies.confy]
version = "0.5.1"
features = ["yaml_conf"]
default-features = false
